# release-manager

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  alembic.ini  pyproject.toml  release-manager-design.md  requirements.txt  schema.sql
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/architecture/: hexagonal-plan.md
release_manager/: __init__.py  config.py  database.py  deployer.py  docker_client.py  github.py  health.py  main.py  migrations.py  models.py  poller.py
release_manager/adapters/: __init__.py  docker.py  github_adapter.py  persistence.py  time.py
release_manager/application/: ports.py
release_manager/application/services/: deployment_service.py  environment_service.py
release_manager/docker_templates/: docker-stack-template.yml.j2
release_manager/routers/: __init__.py  api.py  pages.py  ui.py
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
templates/partials/: dashboard.html  deploy-status.html  diff.html  directory.html  environments.html  health.html  history.html
tests/: __init__.py  test_api.py  test_database.py  test_deployer.py  test_docker_service.py  test_github.py  test_poller.py
